Added missing position attributes to PannerNode https://bugs.webkit.org/show_bug.cgi?id=213151

Patch by Clark Wang <clark_wang@apple.com> on 2020-06-16
Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

Re-baselined previous tests that either now pass, or fail at a further stage than before.

* web-platform-tests/webaudio/historical-expected.txt:
* web-platform-tests/webaudio/idlharness.https.window-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-pannernode-interface/ctor-panner-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-pannernode-interface/panner-automation-basic-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-pannernode-interface/panner-automation-position-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-pannernode-interface/panner-distance-clamping-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-pannernode-interface/pannernode-basic-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-pannernode-interface/test-pannernode-automation-expected.txt:

Source/WebCore:

Implemented position attributes in PannerNode interface, as per spec:
https://www.w3.org/TR/webaudio/#pannernode.

Re-baselined tests previous tests that either now pass, or fail at a further stage than before.

* Modules/webaudio/PannerNode.cpp:
(WebCore::PannerNode::PannerNode):
(WebCore::PannerNode::position const):
(WebCore::PannerNode::setPosition):
(WebCore::PannerNode::getAzimuthElevation):
(WebCore::PannerNode::dopplerRate):
(WebCore::PannerNode::distanceConeGain):
* Modules/webaudio/PannerNode.h:
* Modules/webaudio/PannerNode.idl:

LayoutTests:

Added change to unprefix PannerNode in web-platform-tests.

* resources/testharnessreport.js:

Canonical link: https://commits.webkit.org/226050@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263118 268f45cc-cd09-0410-ab3c-d52691b4dbfc